[gd_scene load_steps=8 format=3 uid="uid://cs5tj6l1m1lcp"]

[ext_resource type="Script" path="res://Scenes/UI/HUD.gd" id="1_sr3ep"]
[ext_resource type="Texture2D" uid="uid://bqkouqprnsun1" path="res://Sprites/bee_timer.png" id="1_vqc1i"]
[ext_resource type="Theme" uid="uid://bfw3jfeywv4ow" path="res://Scenes/UI/ui.tres" id="3_cjvpt"]
[ext_resource type="PackedScene" uid="uid://h2of5abi7bvc" path="res://Scenes/UI/lowHPVignette.tscn" id="4_0ig8q"]

[sub_resource type="Animation" id="Animation_p0hl4"]
resource_name = "TimerDecrease"

[sub_resource type="Animation" id="Animation_qofdy"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qcmmc"]
_data = {
"TimerDecrease": SubResource("Animation_p0hl4"),
"idle": SubResource("Animation_qofdy")
}

[node name="HUD" type="CanvasLayer"]
layer = 0
script = ExtResource("1_sr3ep")

[node name="Emitter" type="Node2D" parent="."]
z_index = 1
position = Vector2(1244, 62)

[node name="TimeNode" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1131.0
offset_top = 8.0
offset_right = 1171.0
offset_bottom = 48.0

[node name="TimeContainer" type="BoxContainer" parent="TimeNode"]
layout_mode = 0
offset_left = -76.0
offset_top = 4.0
offset_right = 150.0
offset_bottom = 102.0

[node name="TimeIconBox" type="HBoxContainer" parent="TimeNode/TimeContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TimeNode/TimeContainer/TimeIconBox"]
layout_mode = 2
texture = ExtResource("1_vqc1i")
expand_mode = 3

[node name="TimeLabelBox" type="HBoxContainer" parent="TimeNode/TimeContainer"]
layout_mode = 2
alignment = 2

[node name="TimerLabel" type="Label" parent="TimeNode/TimeContainer/TimeLabelBox"]
layout_mode = 2
theme = ExtResource("3_cjvpt")
text = "00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_qcmmc")
}

[node name="lowHPVignette" parent="." instance=ExtResource("4_0ig8q")]

[node name="SpeedrunTimer" type="Label" parent="."]
visible = false
offset_left = 1093.0
offset_top = 95.0
offset_right = 1244.0
offset_bottom = 157.0
theme = ExtResource("3_cjvpt")
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 25
text = "00'00\"000"
vertical_alignment = 1
